kai-test-kafka/deployment.yaml
# my-k8s-configs/kai-test-kafka/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kai-test-kafka-deployment
  namespace: kai-test-kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kai-test-kafka
  template:
    metadata:
      labels:
        app: kai-test-kafka
    spec:
      imagePullSecrets:
      - name: dockerhub-creds
      containers:
      - name: app
        image: airlangga22/kai-test-kafka:9e57799
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        
        # ==================== PENAMBAHAN DI SINI ====================
        # Menentukan permintaan dan batas sumber daya untuk container.
        # Ini akan membantu Kubernetes menjadwalkan Pod secara efisien dan mencegahnya
        # menggunakan terlalu banyak sumber daya dari Node.
        resources:
          requests:
            # Jumlah memori minimum yang dijamin oleh K8s untuk container ini.
            memory: "512Mi"
            # Jumlah CPU minimum yang dijamin oleh K8s untuk container ini.
            # "250m" berarti 0.25 core CPU.
            cpu: "500m"
          limits:
            # Jumlah memori maksimum yang boleh digunakan oleh container ini.
            # Jika melebihi, Pod akan dimatikan (OOMKilled).
            memory: "750Mi"
            # Jumlah CPU maksimum yang boleh digunakan oleh container ini.
            # "500m" berarti 0.5 core CPU.
            cpu: "1000m"
        # ==========================================================

        volumeMounts:
        - name: config-volume
          mountPath: /app/config
      volumes:
      - name: config-volume
        configMap:
          name: kai-test-kafka-config
